Fix layout issues with navbar on media pages

--- a/app/styles/layout/_navbar.scss
+++ b/app/styles/layout/_navbar.scss
@@ -117,14 +117,9 @@
     border-bottom: none;
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: 768px) and (max-width: 991px) {
     .container {
       max-width: 730px;
-    }
-  }
-  @media (min-width: 992px) {
-    .container {
-      max-width: 940px;
     }
   }
 
